<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mitra</string>
    <string name="reg_heading_first">Enter your mobile number to Log In</string>
    <string name="reg_heading_sub_heading_highlight">We couldn’t find account with this number. Please enter mobile number registered with your employer.</string>
    <string name="reg_heading_second">Only use mobile number registered with your employer</string>
    <string name="et_hint_otp">Enter Number</string>
    <string name="et_hint_otp_number">Enter Otp received on 9599525080</string>
    <string name="bottom_navigation_home">Earn</string>
    <string name="bottom_navigation_borrow">Borrow</string>
    <string name="bottom_navigation_insure">Insure</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulation">Congratulation</string>
    <string name="congratulation_sub">You are just two steps away from receiving your first salary </string>
    <string name="title_loan">Module Title</string>
    <string name="aadhaar_card_front_tv">Aadhaar Card Front</string>
    <string name="aadhaar_card_front_tv_pan">PAN Card</string>
    <string name="upload_picture_tv">Upload picture of front side of your Aadhaar card</string>
    <string name="upload_picture_tv_back">Upload picture of  back side of your Aadhaar card</string>
    <string name="upload_picture_tv_pan">Upload picture of PAN Card</string>
    <string name="didn_otp">Didn’t receive OTP?</string>
    <string name="account_details">Account Details</string>
    <string name="account_number">Account Number</string>
    <string name="re_enter_account_number" translatable="false">Re-enter account Number</string>
    <string name="ifsc">IFSC</string>
    <string name="your_name_as_per_bank_account">Your name as per bank account</string>
    <string name="this_information_will_be_securely_stored_with_us_as_per_mitra_s_terms_of_service_and_privacy_policy">This information will be securely stored with us as per Mitra’s Terms of Service and Privacy Policy</string>
    <string name="confirm_bank_account">Confirm Bank Account</string>
    <string name="log_in">Log In</string>
    <string name="language_selection">Select Language</string>
    <string name="notification">Notifications</string>
    <string name="profile">My Profile</string>
    <string name="vishal_bharadwaj">Vishal Bharadwaj</string>
    <string name="_91_9599432523">+91-9599432523</string>
    <string name="job_details">Job Details</string>
    <string name="employee_id">Employee ID</string>
    <string name="employer">Employer</string>
    <string name="bha0356">BHA0356</string>
    <string name="doj">Date of Joining</string>
    <string name="_23_jan_2021">23-JAN-2021</string>
    <string name="settings">Settings</string>
    <string name="help_and_settings">Help &amp; Settings</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="my_documents">My Documents</string>
    <string name="my_salary_slip">My Salary Slip</string>
    <string name="language">Language</string>
    <string name="tv_heading">English</string>
    <string name="help_and_support">Help and Support</string>
    <string name="log_out">Log out</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="app_version_1_3">App version 1.3</string>
    <string name="app_version" translatable="false">App version</string>
    <string name="send_otp">Send Otp</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="upload_document">Upload Documents</string>
    <string name="start_uploading_documents">Start uploading documents</string>
    <string name="done">Done</string>
    <string name="select_a_document_to_verify">Select a document to verify</string>
    <string name="aadhar_front">Aadhar Front</string>
    <string name="aadhar_back">Aadhar Back</string>
    <string name="loading">Loading...</string>
    <string name="my_earning">My Earnings</string>
    <string name="your_income">Current Earnings</string>
    <string name="_21_april">21-April</string>
    <string name="_1_april_to_30_april">1 - April to 30 April</string>
    <string name="_3_days_left">3 days Left</string>
    <string name="rs_25_320">RS 25,320</string>
    <string name="salary_details">Your Salary is due in 2 days.</string>
    <string name="without_any_delay_you_get_your_money_on_time">To receive your salary on time, please complete following steps.</string>
    <string name="verify_document">Verify Document</string>
    <string name="we_need_this_to_verify_your_indentify">Upload Document</string>
    <string name="upload">Upload</string>
    <string name="add_bank_account_details">Add Bank Account Details</string>
    <string name="you_ll_recevie_your_salary_in_the_account">Add Bank account</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="support">Support</string>
    <string name="mitra_is_always_here_to_help">Mitra is always here to help you</string>
    <string name="call_person">Call us on +91-9876543210 any time between 9 AM - 7 PM, Monday to Friday.</string>
    <string name="congratulation_name">Congratulation</string>
    <string name="pending_document">Pending Document</string>
    <string name="wait">Please wait</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_account_receving">You’re receiving salary in the following account</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="title_activity_maps">Map</string>
    <string name="msg_token_fmt">MessageFormat</string>
    <string name="view_breakup"><u>View Breakup</u></string>
    <string name="earning_breakup">Earnings breakup</string>
    <string name="net_payout">Net Payout</string>
    <string name="share_subject">BreakUpDetails</string>
    <string name="share_using">share using</string>
    <string name="term_condition">By clicking Log in, you’re agreeing to our <u><b>terms of service.</b></u></string>
    <string name="term_and_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="bank_address">Bank Address</string>
    <string name="aadhaar_card_back_tv">Aadhar Card Back</string>
    <string name="validation_message">Please enter 10 digit number</string>
    <string name="term_and_condition_link">https://vahan.ai/terms-of-use.html</string>
    <string name="number_heading_text" translatable="false">Enter OTP recived on +91</string>
    <string name="number_screen_heading_v2">Enter your mobile number</string>
    <string name="number_screen_sub_heading_v2">Please enter the same mobile number registered with your employer</string>
    <string name="mobile_number_v2">Mobile Number</string>
    <string name="enter_otp_v2_heading">Enter OTP</string>
    <string name="resend_otp_v2_first">Incorrect Mobile Number? Re-enter now</string>
    <string name="resend_otp_v2_term_and_condition_first">By clicking Next, you agree with our</string>
    <string name="resend_otp_v2_term_and_condition_Second">Terms &amp; Conditions</string>
    <string name="resend_otp_v2_term_and_condition_third">Privacy Policy</string>
    <string name="incorrect_mobile_number_re_enter_now_v2">Incorrect Mobile Number?</string>
    <string name="incorrect_mobile_number_re_enter_now_v2_second">Re-enter now</string>
    <string name="earnings_tc">Earnings</string>
    <string name="home_tc">Home</string>
    <string name="profile_tv_v2">Profile</string>
    <string name="history_tv_v2">History</string>
    <string name="earn_screen_tv_v2">2 Documents are missing!</string>
    <string name="earn_screen_tv_v2_document">Upload documents to receive salary</string>
    <string name="insurance_tv_v2">Insurance</string>
    <string name="my_earnings_v2_profile">My Earnings</string>
    <string name="cashout_available">Cashout Available!</string>
    <string name="loan_tv_v2">Loan</string>
    <string name="number_heading_tv">Please enter the 4 digit OTP Code sent on +91 </string>
    <string name="downloading">Downloading...</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>
    <string name="our_partners_mitra_splash_tv">OUR PARTNERS</string>
    <string name="starting_text_91">+91</string>
    <string name="enter_numbr_and_tv">and</string>
    <string name="next_btn_tv">Next</string>
    <string name="transaction_history_tv">Transaction History</string>
    <string name="starter_one_1">Manage all your earnings with just one app!</string>
    <string name="starter_one_sub">You can now manage all your earnings andn\nwithdrawals at ease</string>
    <string name="starter_two_2">Cashout your money anytime!</string>
    <string name="starter_two_sub">No more cash crunch - whenever you are in need of money, Mitra is there for you!</string>
    <string name="starter_three_3">Insurance for you and your family!</string>
    <string name="starter_three_sub">We care for you and your family by providing best health services and insurance schemes</string>
    <string name="starter_four_4">Work with multiple companies &amp; Earn more!</string>
    <string name="starter_four_sub">You can now work with multiple companies and get additional incentives form Mitra. Earn up to \n ₹ 55,000 /month</string>
    <string name="state_bank_of_india_8033">State Bank of India .... 8033</string>
    <string name="savings_account">Savings Account</string>
    <string name="savings_plan" translatable="false">Start Saving Plan</string>
    <string name="bottom_sheet_v1_tv">What is a Cashout and how to get it?</string>
    <string name="bottom_sheet_v1_sub_tv">You would soon be able to cashout your earnings instantly without waiting for the end of the pay cycle!</string>
    <string name="eligibility_tv">Eligibility</string>
    <string name="we_will_notify_you_tv">We will notify you</string>
    <string name="note_that">Note that</string>
    <string name="you_need_to_be_on_mitra_payroll_for_3_months_or_more_to_avail_the_cashout_benefit">You need to be on Mitra payroll for 3 months or more to avail the\nCashout benefit</string>
    <string name="we_do_not_charge_you_any_extra_fees_when_you_cashout_this_amount_it_is_a_part_of_your_payout_received_early">We do not charge you any extra fees when you cashout this amount. It is a part of your payout received early</string>
    <string name="got_it">Got It</string>
    <string name="no_hidden_charges_tv">NO HIDDEN CHARGES</string>
    <string name="how_it_works">How it works?</string>
    <string name="tenure_of">Select tenure for the loan of</string>
    <string name="select_tenure">Select Tenure</string>
    <string name="every_month">every month</string>
    <string name="press_the_back_button">Press the back Button</string>
    <string name="emi_text" translatable="false">EMI</string>
    <string name="text" translatable="false">833</string>
    <string name="rupee" translatable="false">₹</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="weekly_earnings_orderCountTxt">"Order Count :  "</string>
    <string name="weekly_earnings_orderPayoutTxt">Order Payout</string>
    <string name="add_a_referral_code">Add a referral code</string>
    <string name="referral_code">Referral Code</string>
    <string name="telugu">Telugu</string>
</resources>