<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="false"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/lg_rg_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <RadioButton
                android:id="@+id/hindi_lg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/hindi"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold">

            </RadioButton>

            <RadioButton
                android:id="@+id/english_lg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold">

            </RadioButton>

            <RadioButton
                android:id="@+id/telugu_lg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telugu"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold">

            </RadioButton>

        </RadioGroup>

        <RelativeLayout

            android:id="@+id/btn_lng_selection"
            style="@style/BtnStyle"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@null"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/done">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/language_selection"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>