<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/parentContainer"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:context=".EnterNumberActivity">

        <TextView
            android:id="@+id/iv_icon"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/dimen_28dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/number_screen_heading_v2"
            android:textColor="@color/black_v2"
            android:textStyle="bold"
            android:textSize="30sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/number_screen_sub_heading_v2"
            android:textColor="@color/light_color_heading"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_sub_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_heading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="@string/reg_heading_second"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/container_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sub_heading"
            android:layout_marginTop="40dp">

            <RelativeLayout
                android:id="@+id/containt_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_number_fixed_suffix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/starting_text_91"
                    android:textColor="@color/light_color_heading"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:translationY="3dp" />

                <LinearLayout
                    android:id="@+id/container_edt_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/tv_number_fixed_suffix"
                    android:orientation="vertical"
                    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_accountNumber"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14sp"
                        android:layout_marginEnd="14sp"
                        android:textColorHint="@color/light_color_heading"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_verify_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile_number_v2"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textColor="@color/black_v2"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </RelativeLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_heading_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/containt_rl"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black_heading_text"
                android:textSize="12sp"
                android:visibility="visible" />
            
            
            <TextView
                android:layout_below="@+id/tv_heading_second"
                android:id="@+id/tv_referral_code"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:textSize="@dimen/dimen_16sp"
                android:fontFamily="@font/opensanssemibold"
                android:textColor="@color/default_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_referral_code"/>
            
            <EditText
                android:layout_below="@+id/tv_referral_code"
                android:id="@+id/edt_referral_code"
                android:layout_width="match_parent"
                android:hint="@string/referral_code"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16sp"
                android:fontFamily="@font/opensanssemibold"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/send_otp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_tc_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/term_condition"
                android:textColor="@color/text_heading"
                android:textSize="12sp"
                android:visibility="gone" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/t_c_privacy_pol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/resend_otp_v2_term_and_condition_first"
                android:textColor="@color/light_color_heading"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/t_c_privacy_pol_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/resend_otp_v2_term_and_condition_Second"
                    android:textColor="@color/default_200"
                    android:padding="@dimen/dimen_8dp"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/t_c_privacy_pol_first"
                    android:gravity="center"
                    android:padding="@dimen/dimen_8dp"
                    android:text="@string/enter_numbr_and_tv"
                    android:textColor="@color/light_color_heading"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/t_c_privacy_pol_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/middle"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="start"
                    android:text="@string/resend_otp_v2_term_and_condition_third"
                    android:padding="@dimen/dimen_8dp"
                    android:textColor="@color/default_200"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/send_otp"
            style="@style/BtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_48dp"
            android:minWidth="@dimen/dimen_88dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@null"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/done">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/next_btn_tv"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

    </RelativeLayout>
</layout>