<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/next_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_emi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/emi_text"
                android:textColor="@color/light_color_heading"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_emi_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/text"
                android:textColor="@color/default_200"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/every_month"
                android:textColor="@color/light_color_heading"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/weekly_debited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:textColor="@color/light_color_heading"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/next"
                style="@style/BtnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@null"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/done">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="@string/next_btn_tv"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/next_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:contentDescription="@string/press_the_back_button"
                    android:padding="@dimen/dimen_4dp"
                    android:src="@drawable/ic_back_arrow_1" />

                <TextView
                    android:id="@+id/tv_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:textStyle="bold"
                    android:text="@string/tenure_of"
                    android:textColor="@color/black_v2"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tv_heading_sub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_heading"
                    android:layout_marginTop="35dp"

                    android:gravity="center"
                    android:text="@string/select_tenure"
                    android:textColor="@color/light_color_heading"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tenure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_heading_sub"
                    android:layout_marginTop="20dp">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>